updating docs; inactive filtering;
