# docs/swagger.json
@@ -26,6 +26,12 @@
                 ],
                 "parameters": [
                     {
+                        "type": "boolean",
+                        "description": "hide inactive clients",
+                        "name": "filter_inactive",
+                        "in": "query"
+                    },
+                    {
                         "type": "string",
                         "description": "With the bearer in front",
                         "name": "Authorization",
@@ -148,6 +154,12 @@
                 ],
                 "parameters": [
                     {
+                        "type": "boolean",
+                        "description": "hide inactive position",
+                        "name": "filter_inactive",
+                        "in": "query"
+                    },
+                    {
                         "type": "string",
                         "description": "With the bearer in front",
                         "name": "Authorization",
@@ -269,6 +281,12 @@
                     "projects"
                 ],
                 "parameters": [
+                    {
+                        "type": "boolean",
+                        "description": "hide inactive project",
+                        "name": "filter_inactive",
+                        "in": "query"
+                    },
                     {
                         "type": "string",
                         "description": "With the bearer in front",
@@ -398,6 +416,12 @@
                     "rooms"
                 ],
                 "parameters": [
+                    {
+                        "type": "boolean",
+                        "description": "hide inactive rooms",
+                        "name": "filter_inactive",
+                        "in": "query"
+                    },
                     {
                         "type": "string",
                         "description": "With the bearer in front",
@@ -1037,6 +1061,12 @@
                         "name": "pagesize",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "hide inactive users",
+                        "name": "filter_inactive",
+                        "in": "query"
                     },
                     {
                         "type": "string",
